--- a/time_series_analysis.ipynb
+++ b/time_series_analysis.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The following is a script to do the following:\n",
-    "# 1. "
+    "# The following is a script to do perform a time series analysis on yen future prices and make predictions about future price movement to determine if it is a good investment today. \n",
+    "# ARMA, ARIMA, and GARCH models are used for the evaluation."
    ]
   },
   {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "1990-01-08                     52072.0  "
       ]
      },
-     "execution_count": 273,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,75 +573,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Settle</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2019-10-09</th>\n",
-       "      <td>-0.410601</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-10-10</th>\n",
-       "      <td>-0.369458</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-10-11</th>\n",
-       "      <td>-0.564304</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-10-14</th>\n",
-       "      <td>0.151335</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-10-15</th>\n",
-       "      <td>-0.469509</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              Settle\n",
-       "Date                \n",
-       "2019-10-09 -0.410601\n",
-       "2019-10-10 -0.369458\n",
-       "2019-10-11 -0.564304\n",
-       "2019-10-14  0.151335\n",
-       "2019-10-15 -0.469509"
-      ]
-     },
-     "execution_count": 225,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 7514 entries, 1990-01-03 to 2019-10-15\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   Settle  7514 non-null   float64\n",
+      "dtypes: float64(1)\n",
+      "memory usage: 117.4 KB\n"
+     ]
     }
    ],
    "source": [
@@ -650,7 +597,7 @@
     "# In this case, you may have to replace inf, -inf values with np.nan\"s\n",
     "returns = yen_futures[[\"Settle\"]].pct_change() * 100\n",
     "returns = returns.replace(-np.inf, np.nan).dropna()\n",
-    "returns.tail()"
+    "returns.info()"
    ]
   },
   {
