Updated code and completed the README file.

--- a/time_series_analysis.ipynb
+++ b/time_series_analysis.ipynb
@@ -791,8 +791,7 @@
     "     1. Set P=5, D=1, and Q=1 in the model (e.g., ARIMA(df, order=(5,1,1))\n",
     "     2. P= # of Auto-Regressive Lags, D= # of Differences (this is usually =1), Q= # of Moving Average Lags\n",
     " 2. Output the ARIMA summary table and take note of the p-values of the lags. Based on the p-values, is the model a good fit (p < 0.05)? - No this is not a good model because all p values are well above 0.05.\n",
-    " 3. Construct a 5 day forecast for the Settle Price. What does the model forecast will happen to the Japanese Yen in the near term? - The model says the price will continue to increase but it may start to   \n",
-    "    plateu around day 5."
+    " 3. Construct a 5 day forecast for the Settle Price. What does the model forecast will happen to the Japanese Yen in the near term? - The model says the price will continue to increase but it may start to plateu around day 5."
    ]
   },
   {
@@ -1357,7 +1356,7 @@
    "metadata": {},
    "source": [
     "### Based on your time series analysis, would you buy the yen now?\n",
-    "Based on the plotted trend of the data for 2017-2019, the price of the yen is increasing and it is still well below its all time high in 2012, both of which are good signs.  The results of the models (although they don't appear accurate - see answer to third question below) show the price will continue to increase in the next five days, although it may start to plateau around day 5. Given all this data (i.e., rising trend and expected short term gains) and the assumption that the models are correct, I would buy the yen now.\n",
+    "Based on the plotted trend of the data from 2017-2019, the price of the yen is increasing and it is still well below its all time high in 2012, both of which are good signs.  The results of the models (although they don't appear accurate - see answer to third question below) show the price will continue to increase in the next five days, although it may start to plateau around day 5. Given all this data (i.e., rising trend and expected short term gains) and the assumption that the models are correct, I would buy the yen now.\n",
     "\n",
     "### Is the risk of the yen expected to increase or decrease?\n",
     "From the GARCH model forecast, the volatilty and thus the risk is expected to increase in the near future.\n",
